fixing broken index link

--- a/marbelhome.css
+++ b/marbelhome.css
@@ -1,5 +1,5 @@
 h1{
-  font-family: Calibri;
+  font-family: Calibri, Candara, Segoe, "Segoe UI", Optima, Arial, sans-serif;
   color:#2f3037;
   opacity: .8;
   font-size:10vw;
@@ -17,7 +17,7 @@ hr {
 }
 
 h2 {
-  font-family: Calibri;
+  font-family: Calibri, Candara, Segoe, "Segoe UI", Optima, Arial, sans-serif;
   text-align: center;
   color:#2f3037;
   font-size:2.5vw;
